add some jsp page

--- a/src/main/resource/db.properties
+++ b/src/main/resource/db.properties
@@ -1,6 +1,6 @@
 #wechat mysql
 db.my.driver=com.mysql.jdbc.Driver
-db.my.url=jdbc:mysql://127.0.0.1:3306/wechat-manager?characterEncoding=utf8
+db.my.url=jdbc:mysql://127.0.0.1:3306/wechat_manager?characterEncoding=utf8
 db.my.username=root
 db.my.password=123456
 db.my.initial.size=1
