--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,19 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.3.6</version>
 		</dependency>
+		<!-- json -->
+		<dependency>
+		     <groupId>com.alibaba</groupId>
+		     <artifactId>fastjson</artifactId>
+		     <version>1.1.41</version>
+		</dependency>
+		<!-- java readis客户端 -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.6.2</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
