--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,11 @@
 			<artifactId>jedis</artifactId>
 			<version>2.6.2</version>
 		</dependency>
+		<dependency>  
+		    <groupId>org.aspectj</groupId>  
+		    <artifactId>aspectjweaver</artifactId>  
+		    <version>1.6.12</version>  
+		</dependency>
 		
 	</dependencies>
 
