--- a/src/main/resource/db.properties
+++ b/src/main/resource/db.properties
@@ -1,14 +1,8 @@
-# jdbc.X
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://yourServerIP:3306/yourDatabase?createDatabaseIfNotExist=true
-jdbc.user=user
-jdbc.pass=password
-
-# hibernate.X
-hibernate.connection.driverClass=org.gjt.mm.mysql.Driver
-hibernate.connection.url=jdbc:mysql:// 127.0.01:3306/wechat_manager
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-hibernate.connection.username=root
-hibernate.connection.password=123456
-hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create-drop
+#wx mysql
+db.wx.driver=com.mysql.jdbc.Driver
+db.wx.url=jdbc:mysql://127.0.0.1:3306/wechat_manager?characterEncoding=utf8
+db.wx.username=root
+db.wx.password=123456
+db.wx.initial.size=1
+db.wx.min.active=2
+db.wx.max.active=2
